fix: the products skeleton jumping issue

--- a/apps/frontend/src/app/[locale]/products/[slug]/loading.style.css
+++ b/apps/frontend/src/app/[locale]/products/[slug]/loading.style.css
@@ -8,7 +8,7 @@
 }
 
 .utrecht-page-loading__body {
-  block-size: 70vh;
+  block-size: 50svh;
 }
 
 .utrecht-page-loading__body-item {
