--- a/apps/frontend/src/styles/globals.css
+++ b/apps/frontend/src/styles/globals.css
@@ -6,7 +6,6 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   margin-block: 0;
   margin-inline: 0;
-  overflow-y: hidden;
   padding-block: 0;
   padding-inline: 0;
 }
